test cases by lukesch